--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,8 @@
-Paso 1. Crea un archivo .env en la reiz de tu proyecto
+Paso 1. Crea un archivo .env en la raiz de tu proyecto
+
+Paso 2. Pega las credenciales 
 
 
-
-
-
-DBUSER="Aqui pon tus credenciales"
-DBPASSWORD="Aqui pon tus credenciales"
-DBNAME="Aqui pon tus credenciales"
+DBUSER="Aqui tus credenciales"
+DBPASSWORD="Aqui tus credenciales"
+DBNAME="Aqui tus credenciales"
