--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
-DBUSER=marlon
-DBPASSWORD=sistemas
-DBNAME=test
+
+
+DBUSER= marlon
+DBPASSWORD=admin
+DBNAME= Portafolio
+
+
+CLOUD_NAME=ddx5ylxtw
+API_KEY=232486897322792
+API_SECRET=AHvuvZy6dWOa5AjJsgYnvzYTi9k
+
+
+HOST_MAILTRAP = sandbox.smtp.mailtrap.io
+PORT_MAILTRAP = 2525
+USER_MAILTRAP = e7543171e662f5
+PASS_MAILTRAP = 64c703c668bd8e
+
+MONGODB_URI = mongodb+srv://admin:admin@cluster0.vu6o189.mongodb.net/?retryWrites=true&w=majority
