--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,16 @@ Paso 2. Pega las credenciales
 DBUSER="Aqui tus credenciales"
 DBPASSWORD="Aqui tus credenciales"
 DBNAME="Aqui tus credenciales"
+
+
+CLOUD_NAME="Aqui tus credenciales"
+API_KEY="Aqui tus credenciales"
+API_SECRET="Aqui tus credenciales"
+
+
+HOST_MAILTRAP = "Aqui tus credenciales"
+PORT_MAILTRAP = "Aqui tus credenciales"
+USER_MAILTRAP = "Aqui tus credenciales"
+PASS_MAILTRAP = "Aqui tus credenciales"
+
+MONGODB_URI = "Aqui tus credenciales"
