--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start":"node src/index.js",
-    "dev" : "nodemon src/index.js"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^1.37.2",
     "connect-flash": "^0.1.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-handlebars": "^7.0.7",
     "express-session": "^1.17.3",
+    "fs-extra": "^11.1.1",
     "method-override": "^3.0.0",
     "mongoose": "^7.2.2",
+    "nodemailer": "^6.9.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0"
   },
@@ -27,4 +31,3 @@
     "npm-check-updates": "^16.10.12"
   }
 }
-
